# Plant-Inoculation-AI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
Task 01. Image Annotation and Review/labeling/: task_1_requirements_im1.ipynb  task_1_requirements_im2.ipynb  task_1_requirements_im3.ipynb  task_1_requirements_im4.ipynb  task_1_requirements_im5.ipynb  train_Dean_231754_im1.png.labeling  train_Dean_231754_im2.png.labeling  train_Dean_231754_im3.png.labeling  train_Dean_231754_im4.png.labeling
Task 03. Plant Instance Segmentation/: task_3.ipynb
Task 04. Dataset Preparation for Model Training/: task4.ipynb
Task 04. Dataset Preparation for Model Training/dataset raw/Y2B_23/: readme.txt
Task 04. Dataset Preparation for Model Training/dataset_patched_256/: train_mask_labels.csv  val_mask_labels.csv
Task 04. Dataset Preparation for Model Training/dataset_patched_960/: train_mask_labels.csv  val_mask_labels.csv
Task 05. Model Training/: task5_training.ipynb
Task 06. Individual Root Segmentation/: task6.ipynb
Task 07. Root System Architecture (RSA) Extraction/: task7.ipynb
Task 08. End-to-End Computer Vision Pipeline/: cv_pipeline.py  predictions.csv
Task 09. Simulation Environment Setup/: task9.ipynb
Task 10. Creating a Gym Wrapper/: test_wrapper.py
Task 11. Reinforcement Learning/: .cursorignore  callbacks.py  hyperparameter_search.ipynb  test_ot2_rl.ipynb  train_ot2_rl.py
Task 11. Reinforcement Learning/best_model/: sac_model_vecnormalize_950000_steps.pkl
Task 12. Creating a PID Controller/: README.md  test_pid_controller.ipynb  test_pid_controller.py
Task 13. Integrating the Computer Vision Pipeline/: root_df_test_image_13.png.csv  task13.ipynb
Task 13. Integrating the Computer Vision Pipeline/ot2_twin/logs/: eval_env.monitor.csv
Task 14. Controller Performance Benchmarking/: task14.ipynb
Task 14. Controller Performance Benchmarking/ot2_twin/: sim_class.py
Task 14. Controller Performance Benchmarking/ot2_twin/logs/: eval_env.monitor.csv
computer vision/1. Petri Dish Detection and Extraction/: notebook.ipynb
computer vision/2. Plant Instance Segmentation/: notebook.ipynb
computer vision/3. U-Net Segmentation/: inference.ipynb  training.ipynb  unet_training.py
data/raw/Y2B_23/Y2B_23/: readme.txt
docs/: conf.py  index.rst
docs/api/: computer_vision.rst
notebooks/Task 01. Image Annotation and Review/labeling/: task_1_requirements_im1.ipynb  task_1_requirements_im2.ipynb  task_1_requirements_im3.ipynb  task_1_requirements_im4.ipynb  task_1_requirements_im5.ipynb  train_Dean_231754_im5.png.labeling
notebooks/Task 01. Image Annotation and Review/peer_review/: Soheil Mohammadpour.xlsx
notebooks/Task 02. Petri Dish Detection and Extraction/: task2.ipynb
notebooks/Task 03. Plant Instance Segmentation/: task_3.ipynb
notebooks/Task 04. Dataset Preparation for Model Training/: task4.ipynb
notebooks/Task 04. Dataset Preparation for Model Training/dataset_patched_256/: train_mask_labels.csv  val_mask_labels.csv
notebooks/Task 04. Dataset Preparation for Model Training/dataset_patched_960/: train_mask_labels.csv  val_mask_labels.csv
notebooks/Task 05. Model Training/: inference.py  task5_inference.ipynb  task5_training.ipynb
notebooks/Task 06. Individual Root Segmentation/: task6.ipynb
notebooks/Task 07. Root System Architecture (RSA) Extraction/: RAA.py  task7.ipynb
notebooks/Task 08. End-to-End Computer Vision Pipeline/: predictions.csv  task8.ipynb
notebooks/Task 09. Simulation Environment Setup/: README.md  requirements.txt  task9.ipynb
notebooks/Task 10. Creating a Gym Wrapper/: README.md  ot2_env_wrapper.py  requirements.txt
notebooks/Task 11. Reinforcement Learning/: README.md  hyperparameter_search.ipynb  test_ot2_rl.ipynb
notebooks/Task 12. Creating a PID Controller/: pid_controller.py  test_pid_controller.ipynb
notebooks/Task 13. Integrating the Computer Vision Pipeline/: README.md  root_df_test_image_13.png.csv  task13.ipynb
notebooks/Task 14. Controller Performance Benchmarking/: task14.ipynb
robotics/simulation/: sim_class.py
simulation/ot2_twin/: custom.urdf  ot_2_simulation_v6.urdf
src/plant_inoculation_ai/: __init__.py  cli.py
tests/: __init__.py  test_computer_vision.py  test_robotics.py
(+22 files in other folders)
